--- a/apps/frontend/src/fonts.css
+++ b/apps/frontend/src/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
-  font-family: 'LCD14';
-  src: url('https://nuocergcapwdrngodpip.supabase.co/storage/v1/object/public/media/LCD14.otf') format('opentype');
+  font-family: 'DSEG7Classic';
+  src: url('https://nuocergcapwdrngodpip.supabase.co/storage/v1/object/public/media/DSEG7Classic-Bold.ttf') format('opentype');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
